--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,24 +17,24 @@ jobs:
         python-version: [3.10.8]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install poetry
-        uses: abatilo/actions-poetry@v2
-      - uses: actions/cache@v3
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+      - uses: actions/cache@v4
         name: Define a cache for the virtual environment based on the dependencies lock file
         with:
           path: ./.venv
-          key: venv-${{ hashFiles('poetry.lock') }}
+          key: venv-${{ hashFiles('uv.lock') }}
       - name: Install the project dependencies
         run: |
           mv .env.ci.sample .env
-          poetry install
+          uv sync
       - name: Run Tests
         run: |
-          poetry run coverage run backend/manage.py test
+          uv run coverage run backend/manage.py test
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v4
