Add setuptools to dependencies in pyproject.toml and uv.lock
This change ensures setuptools is included as a dependency for the
project, improving compatibility and build processes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
   "python-decouple>=3.8",
   "gunicorn>=21.2.0",
   "openai>=1.35.13",
+  "setuptools",
 ]
 
 [dependency-groups]
