--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
   "djangorestframework==3.14.0",
   "djangorestframework-camel-case==1.4.2",
   "drf-extra-fields==3.4.1",
-  "drf-yasg==1.21.5",
+  "drf-yasg>=1.21.14",
   "mysqlclient==2.1.1",
   "pillow==9.5.0",
   "sentry-sdk==1.21.1",
