Add Copilot commit message generation instructions
- Include instructions for GitHub Copilot to generate commit messages
- Reference the instructions file located at
  ".github/copilot-commit-message-instructions.md"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,5 +39,10 @@
     "**/mypy_cache": true,
     "**/package-lock.json": true,
     "**/uv.lock": true
-  }
+  },
+  "github.copilot.chat.commitMessageGeneration.instructions": [
+    {
+      "file": ".github/copilot-commit-message-instructions.md"
+    }
+  ]
 }
