--- a/client/package.json
+++ b/client/package.json
@@ -126,6 +126,7 @@
     "@typescript-eslint/parser": "^5.27.1",
     "@vitest/coverage-v8": "^1.4.0",
     "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "happy-dom": "^8.9.0",
     "husky": "^8.0.1",
     "jsdom": "^21.0.0",
