Add permissions to Docker workflows
- Set permissions for contents and packages in all Docker
  build and publish workflows.
- Update image source URL to use the correct repository
  reference format.

--- a/.github/workflows/docker-build-publish-client-tag.yml
+++ b/.github/workflows/docker-build-publish-client-tag.yml
@@ -4,6 +4,10 @@ on:
     types:
       - created
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-and-publish:
     name: Build and Publish Docker Image (tag)
@@ -35,4 +39,4 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}-client:${{ github.head_ref || github.ref_name }}
           labels: |
-            org.opencontainers.image.source=https://github.com/bocabitlabs/${{ github.repository }}
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
