--- a/.github/workflows/docker-build-publish-backend-tag.yml
+++ b/.github/workflows/docker-build-publish-backend-tag.yml
@@ -4,6 +4,10 @@ on:
     types:
       - created
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-and-publish:
     name: Build and Publish Docker Image (tag)
@@ -34,4 +38,4 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}:${{ github.head_ref || github.ref_name }}
           labels: |
-            org.opencontainers.image.source=https://github.com/bocabitlabs/${{ github.repository }}
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
