--- a/.github/workflows/docker-build-publish-client-latest.yml
+++ b/.github/workflows/docker-build-publish-client-latest.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-and-publish:
     name: Build and Publish Docker Image (latest)
@@ -35,4 +39,4 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}-client:latest
           labels: |
-            org.opencontainers.image.source=https://github.com/bocabitlabs/${{ github.repository }}
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
